Added a sample first page, with canvas animation

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "typescript": "3.5.3"
+    "react-vivus": "^0.0.2",
+    "typescript": "3.5.3",
+    "vivus": "^0.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/vivus": "^0.4.0",
+    "node-sass": "^4.12.0"
   }
 }
