--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,9 +17,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "typeRoots": ["node_modules/@types", "custom_typings"]
   },
   "include": [
     "src"
-  ]
+  ],
 }
