--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
+      "@src/*": ["src/*"],
       "@components/*": ["src/components/*"],
-      "@hooks/*": ["src/hooks/*"],
       "@styles/*": ["styles/*"]
     }
   },
